tests/corpus/pass/phase1/242_mut_borrow_write.gw
fn main() -> i32 {
    let x: i32 = 5;
    let r: &mut i32 = &mut x;
    *r = 10;
    return x;
}
